[tool.poetry]
name = "fhirzeug"
version = "0.1.0"
description = "A Python FHIR specification parser for model class generation."
authors = ["Skalar Systems <contact@skalarsystems.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
requests = "^2.23.0"
typer = "^0.1.1"
colorlog = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
flake8-bugbear = "^20.1.4"
pytest = "^5.4.1"
pydantic = "^1.5.1"
pytest-xdist = "^1.32.0"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
fhirzeug = "fhirzeug.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

